small fix to recently viewed block css - hide overflows
git-svn-id: http://svn.civicrm.org/civicrm/trunk@20950 cff41f8d-9fe8-0310-9d4e-fb156a3ffe5e

--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -817,8 +817,8 @@ div.crm-pager a {
   padding-left: 3px;
   border: 1px solid #92B6EC;
   background-color: #fff;
-  background-position: middle left;
   white-space: nowrap;
+  overflow: hidden;  
 }
 
 .block-civicrm div#recently-viewed ul li a {
